# TodoFEC-dbt

./: .gitignore  LICENSE  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
.github/workflows/: recce_ci.yml
dbt/docs/: common_fields.md
dbt/models/: __sources.yml
dbt/models/marts/: advocacy_opposition_by_state_candidate.sql  advocacy_opposition_by_swing_state.sql  aggregated_contributions_to_presidential_candidates.sql
dbt/models/staging/: __sources.yml  _staging_properties.yml  stg_all_candidates.sql  stg_candidate_committee_linkage.sql  stg_candidate_master.sql  stg_committee_master.sql  stg_contributions_from_committees_to_candidates.sql  stg_electronic_fec_sa13.sql  stg_house_senate.sql  stg_operating_expenditures.sql  stg_pac_summary.sql
dbt/seeds/: presidential_candidates.csv  swing_states.csv
evidence/: evidence.plugins.yaml  package-lock.json
evidence/pages/: index.md
evidence/sources/from_duckdb/: advocacy_opposition_by_state_candidate.sql  connection.yaml
script/: config.py  ingest.py  parse.py  parser.py  sync_raw_data.py
