[tool.poetry]
name = "todofec-dbt"
version = "0.1.0"
description = ""
authors = ["DataRecce"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
dbt-duckdb = "^1.9.0"
pandas = "^2.2.3"
pyarrow = "^18.0.0"
duckdb = "^1.1.2"
boto3 = "^1.35.51"
polars = "^1.12.0"
recce = "^0.39.0"
sqlfluff = "^3.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
